--- a/index.html
+++ b/index.html
@@ -72,5 +72,59 @@
         <button class="btn-order">Order Now</button>
       </div>
     </header>
+    <main>
+      <section>
+        <div class="hero">
+          <div class="hero-first">
+            <h1 class="hero-title">Enjoy Your Favorite Food From Anywhere</h1>
+            <p class="hero-text">
+              With just a few clicks, you can have your favorite meals delivered
+              straight to your doorstep, no matter where you are. Order now and
+              enjoy a hassle-free and delicious meal from the comfort of your
+              own home.
+            </p>
+            <button class="btn-order hero-btn">Order Now</button>
+          </div>
+          <div>
+            <img src="./images/hero.jpg" />
+          </div>
+        </div>
+      </section>
+      <section class="section-one-back">
+        <div class="section-one">
+          <div>
+            <img src="./images/apple.jpg" alt="apple" />
+          </div>
+          <div class="section-one-all">
+            <h2>What’s Special About Our Offerings</h2>
+            <p>
+              With our platform, you can browse through a diverse selection of
+              cuisines and local restaurants, and choose from a variety of
+              dishes that cater to your specific taste buds.
+            </p>
+            <ul class="section-one-list">
+              <li>
+                <img src="./images/rocket.jpg" alt="rocket" />
+                <h3>Fasest Delivery</h3>
+                <p>
+                  Our advanced logistics system and dedicated delivery partners
+                  ensure that your meals are delivered to you within 30-minutes.
+                </p>
+              </li>
+              <li>
+                <img src="./images/click.jpg" alt="click" />
+                <h3>Easy To Order</h3>
+                <p>
+                  You can browse through a wide variety of cuisines and
+                  restaurants, select your favorite meals, and place your order
+                  in just a few clicks.
+                </p>
+              </li>
+            </ul>
+            <button>Order Now</button>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
